--- a/src/components/main-page/tab-item/tab-item.scss
+++ b/src/components/main-page/tab-item/tab-item.scss
@@ -3,15 +3,14 @@
   overflow: hidden;
   grid-area: var(--y, 1) / var(--x, 1) / span var(--span, 1) / span var(--span, 1);
   filter: drop-shadow(0.5rem 1rem 1rem hsl(0 0% 10% / 0.75));
-  border-radius: 16px;
 
   &--active {
     z-index: 2;
     grid-column: 1 / -1;
     grid-row: 1 / -1;
-    border-radius: 0;
 
     & .section__content {
+      border-radius: 0;
       scale: none;
     }
   }
@@ -47,13 +46,15 @@
   }
 
   &__content {
+    scale: calc(1 / var(--grid-size) * var(--span));
+    transform-origin: 0 0;
     background: var(--background);
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
     position: relative;
     display: grid;
-    align-items: center;
+    border-radius: 16px;
 
   }
 }
