--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -6,6 +6,25 @@
 
   // transition for theme
   transition: background-color var(--transition), border-color var(--transition);
+
+  // scrollbar
+  scrollbar-width: thin;
+  scrollbar-color: var(--accent) transparent;
+
+  &::-webkit-scrollbar {
+    height: 12px;
+    width: 12px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--accent);
+    border-radius: 5px;
+    border: 3px solid transparent;
+  }
 }
 
 
@@ -40,6 +59,7 @@ h1, h2, h3, h4, h5 {
 
 p {
   margin: 0;
+  line-height: 150%;
 }
 
 a {
@@ -59,8 +79,7 @@ button {
   padding: 0;
 }
 
-ul, li {
-  list-style-type: none;
+ul, li, ol {
   margin: 0;
   padding: 0;
 }
