--- a/src/components/experience-block/experience-block.scss
+++ b/src/components/experience-block/experience-block.scss
@@ -22,11 +22,28 @@
   display: flex;
   gap: 36px;
 
+  @include mobile {
+    flex-direction: column;
+  }
+
   &__date {
     max-width: 290px;
   }
 
   &__container {
     width: 100%;
+  }
+
+  &__about {
+    margin: 20px 0;
+  }
+
+  &__task {
+    margin-bottom: 20px;
+
+    &-list {
+      list-style-position: inside;
+      line-height: 150%;
+    }
   }
 }
