--- a/src/components/v-header/v-header.scss
+++ b/src/components/v-header/v-header.scss
@@ -1,19 +1,31 @@
+@use '@assets/style/mixins' as *;
+
 .frame-header {
   display: grid;
   grid-template-columns: subgrid;
   grid-template-rows: subgrid;
   grid-area: header;
-  border-right: 1px solid #444444;
+  border-right: 1px solid var(--border);
   z-index: var(--z-index-header);
+
+  @include mobile {
+    border-right: none;
+    border-bottom: 1px solid var(--border);
+  }
 
   &__logo {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 1px solid #444444;
+    border-bottom: 1px solid var(--border);
 
     a {
       color: var(--text);
+    }
+
+    @include mobile {
+      border-bottom: none;
+      border-right: 1px solid var(--border);
     }
   }
 
@@ -21,6 +33,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @include mobile {
+      display: none;
+    }
 
     &-list {
       display: flex;
@@ -41,12 +57,16 @@
       justify-content: center;
       padding: 8px 0;
       position: relative;
-      color: #7d7d7d;
+      color: var(--gray);
       transition: var(--transition);
 
+      &--active {
+        color: var(--text);
+      }
 
       &:hover {
-        color: var(--text);
+        color: var(--accent);
+        scale: 1.2;
 
         &:before {
           opacity: 1;
