--- a/src/layouts/default-layout/frame-bottom/frame-bottom.scss
+++ b/src/layouts/default-layout/frame-bottom/frame-bottom.scss
@@ -2,13 +2,13 @@
   grid-area: bottom;
   display: grid;
   grid-template-columns: subgrid;
-  border-top: 1px solid #444444;
+  border-top: 1px solid var(--border);
 
   &__theme {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-right: 1px solid #444444;
+    border-right: 1px solid var(--border);
   }
 
   &__info {
@@ -25,7 +25,7 @@
     align-items: center;
     justify-content: center;
     gap: 16px;
-    color: #7d7d7d;
+    color: var(--gray);
   }
 
   &__links {
@@ -40,7 +40,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #7d7d7d;
+    color: var(--gray);
     transition: var(--transition);
     padding: 0 8px;
     height: 100%;
