--- a/src/layouts/default-layout/default-layout.scss
+++ b/src/layouts/default-layout/default-layout.scss
@@ -1,3 +1,5 @@
+@use '@assets/style/mixins' as *;
+
 .frame {
   position: relative;
   padding: 8px;
@@ -15,8 +17,15 @@
     'bottom bottom';
   grid-template-columns: 40px 1fr;
   grid-template-rows: 40px 1fr 40px;
-  border: 1px solid #444444;
+  border: 1px solid var(--border);
   border-radius: 4px;
+
+  @include mobile {
+    grid-template-areas:
+      "header header header"
+      "content content content"
+      "bottom bottom bottom";
+  }
 }
 
 .frame-content {
