--- a/src/layouts/default-layout/frame-top/frame-top.scss
+++ b/src/layouts/default-layout/frame-top/frame-top.scss
@@ -1,11 +1,17 @@
+@use '@assets/style/mixins' as *;
+
 .frame-top {
   grid-area: top;
   display: grid;
   padding: 0 16px;
-  border-bottom: 1px solid #444444;
+  border-bottom: 1px solid var(--border);
   gap: 16px;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   align-items: center;
+  
+  @include mobile {
+    display: none;
+  }
 
   &__name {
     grid-column-start: 2;
@@ -19,9 +25,9 @@
     grid-column-start: 3;
     gap: 8px;
 
-    button {
+    .action {
       cursor: pointer;
-      color: #7d7d7d;
+      color: var(--gray);
       transition: var(--transition);
 
       &:hover {
