--- a/src/pages/main-page/main-page.scss
+++ b/src/pages/main-page/main-page.scss
@@ -1,3 +1,5 @@
+@use '@assets/style/mixins' as *;
+
 :root {
   --grid-size: 20;
 }
@@ -5,22 +7,13 @@
 .grid-container {
   height: 100%;
   position: relative;
-  //background-image: url('@assets/images/background-light.jpg');
-  background-size: cover;
   display: grid;
   grid-template-columns: repeat(var(--grid-size), 1fr);
   grid-template-rows: repeat(var(--grid-size), 1fr);
 
-  [data-theme='dark'] & {
-    //background-image: url('@assets/images/background-dark.jpg');
-  }
-
-  &__button {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    translate: -50%;
-    z-index: var(--z-index-modal);
+  @include mobile {
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -29,6 +22,10 @@
   inset: 0;
   z-index: 10;
   padding: 0;
+
+  @include mobile {
+    display: none;
+  }
 
   &__list {
     padding: 0;
