remove unused files, refactor theme, add mobile

--- a/src/components/main-page/tab-item/tab-item.scss
+++ b/src/components/main-page/tab-item/tab-item.scss
@@ -1,13 +1,19 @@
+@use '@assets/style/mixins' as *;
+
 .section {
   position: relative;
   overflow: hidden;
   grid-area: var(--y, 1) / var(--x, 1) / span var(--span, 1) / span var(--span, 1);
-  filter: drop-shadow(8px 16px 16px hsl(0 0% 10% / 0.75));
   --v-card-padding: 0;
-  background: var(--background);
+  background: transparent;
 
-  &:deep(.card__content) {
+  & > :deep(.card__content) {
     height: 100%;
+  }
+
+  & > :deep(.card__header) {
+    background: color-mix(in srgb, var(--background) 75%, transparent);
+    backdrop-filter: blur(4px);
   }
 
   &--active {
@@ -18,61 +24,46 @@
     border-width: 0;
     border-radius: 0;
 
-    &:deep(.card__header) {
+    & > :deep(.card__header) {
       height: 0;
       visibility: hidden;
       opacity: 0;
+      border: none;
     }
 
 
     & .section__content {
       border-radius: 0;
       scale: none;
+      @include mobile {
+        height: 100%;
+        width: 100%;
+      }
     }
-  }
 
-  &__header {
-    height: 32px;
-    position: relative;
-    background: color-mix(in srgb, var(--background), var(--primary) 15%);
-    display: flex;
-    padding: 10px;
-    align-items: center;
-    gap: 10px;
-    z-index: var(--z-index-header);
-
-    span {
-      height: 12px;
-      width: 12px;
-      aspect-ratio: 1;
-      border-radius: 50%;
-
-      &:nth-of-type(1) {
-        background: var(--primary-30);
-
-      }
-
-      &:nth-of-type(2) {
-        background: var(--primary-80);
-
-      }
-
-      &:nth-of-type(3) {
-        background: var(--primary-50);
-      }
+    @include mobile {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
     }
   }
 
   &__content {
     scale: calc(1 / var(--grid-size) * var(--span));
     transform-origin: 0 0;
-    background: var(--background);
-    width: calc(100vw - 58px);
-    height: calc(100vh - 98px);
+    background: color-mix(in srgb, var(--background) 75%, transparent);
+    backdrop-filter: blur(4px);
+    width: calc(100dvw - 58px);
+    height: calc(100dvh - 98px);
     overflow: hidden;
     position: relative;
     display: grid;
     border-radius: 16px;
 
+    @include mobile {
+      width: calc(100dvw - 21px);
+    }
   }
 }
