--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -123,6 +123,16 @@ span {
   color: var(--accent);
 }
 
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 80px 24px;
+
+  @include mobile {
+    padding: 40px 16px 70px;
+  }
+}
+
 .fade-enter-active,
 .fade-leave-active {
   transition: opacity 0.3s ease;
