--- a/src/components/contacts-block/contacts-block.scss
+++ b/src/components/contacts-block/contacts-block.scss
@@ -2,16 +2,29 @@
 
 .contacts-block {
   display: flex;
-  width: 100%;
+  align-items: center;
   justify-content: center;
-  gap: 30px;
-  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+
+  @include mobile {
+    align-items: flex-start;
+  }
+
+  &__container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+  }
 
   &__col {
     min-width: 300px;
     display: flex;
     flex-direction: column;
     gap: 30px;
+    min-height: 620px;
 
     @include mobile {
       width: 100%;
