--- a/src/components/ui/v-screen/v-screen.scss
+++ b/src/components/ui/v-screen/v-screen.scss
@@ -1,9 +1,12 @@
+@use '@assets/style/mixins' as *;
+
+
 .card {
   border-radius: var(--v-card-radius, 4px);
   width: var(--v-card-width, 100%);
   display: flex;
   flex-direction: column;
-  height: var(--v-card-height, 100%);
+  height: var(--v-card-height, auto);
   overflow: hidden;
   border: 1px solid var(--border);
 
@@ -15,11 +18,19 @@
     align-items: center;
     height: 40px;
 
+    @include mobile {
+      padding: 0 4px;
+    }
+
     &-actions {
       margin-left: auto;
       color: var(--border);
       display: flex;
       gap: 8px;
+
+      @include mobile {
+        gap: 4px;
+      }
     }
   }
 
