--- a/src/components/v-theme-switch/v-theme-switch.scss
+++ b/src/components/v-theme-switch/v-theme-switch.scss
@@ -12,3 +12,22 @@
     color: var(--accent);
   }
 }
+
+.transition-grid {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  z-index: var(--z-index-modal);
+
+  &__element {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    background-color: var(--text);
+  }
+}
