--- a/src/components/experience-block/experience-block.scss
+++ b/src/components/experience-block/experience-block.scss
@@ -38,12 +38,25 @@
     margin: 20px 0;
   }
 
+  &__info {
+    display: inline-block;
+  }
+
   &__task {
     margin-bottom: 20px;
 
     &-list {
+      list-style-type: '☑️ ';
       list-style-position: inside;
       line-height: 150%;
+    }
+  }
+
+  &__item {
+    margin-bottom: 20px;
+
+    &:last-child {
+      margin-bottom: 0;
     }
   }
 }
