--- a/src/components/v-header/v-header-menu/v-header-menu.scss
+++ b/src/components/v-header/v-header-menu/v-header-menu.scss
@@ -1,12 +1,131 @@
 @use '@assets/style/mixins' as *;
 
-.header-menu {
-  display: none;
-  position: relative;
-  justify-self: flex-end;
+.frame-header {
+  &__nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  @include mobile {
-    display: block;
+    @include mobile {
+      overflow: hidden;
+      right: 0;
+      top: 49px;
+      height: 0;
+      width: calc(100% - 18px);
+      position: fixed;
+      left: 9px;
+      background-color: var(--background);
+      transition: var(--transition);
+      display: block;
+    }
+
+    &--open {
+      height: calc(100% - 98px);
+    }
+
+    &-list {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      list-style-type: none;
+
+      @include mobile {
+        padding: 32px 0;
+      }
+    }
+
+    &-item {
+      width: 100%;
+      display: flex;
+
+      @include mobile {
+        padding: 8px 0;
+        gap: 16px;
+        align-items: baseline;
+
+        span {
+          width: 40px;
+          text-align: right;
+          color: var(--text-80);
+        }
+      }
+    }
+
+    &-link {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 8px 0;
+      position: relative;
+      color: var(--gray);
+      transition: var(--transition);
+
+      @include mobile {
+        display: block;
+        font-size: var(--h3-size);
+        height: 100%;
+        color: var(--text);
+        padding: 0;
+      }
+
+
+      &--active {
+        color: var(--text);
+
+        @include mobile {
+          color: var(--accent);
+        }
+      }
+
+      &:hover {
+        color: var(--accent);
+        scale: 1.2;
+
+        @include mobile {
+          scale: 1;
+          color: var(--text-contrast);
+        }
+
+        &:before {
+          opacity: 1;
+        }
+      }
+
+
+      &:before {
+        background: var(--text);
+        color: var(--text-contrast);
+        border-radius: 4px;
+        max-width: 20rem;
+        padding: 4px 8px;
+        opacity: 0;
+        transition: var(--transition);
+        width: max-content;
+        bottom: auto;
+        left: calc(100% + 10px);
+        right: auto;
+        top: 50%;
+        transform: translateY(-50%);
+        content: attr(data-tip);
+        pointer-events: none;
+        position: absolute;
+
+        @include mobile {
+          display: none;
+        }
+      }
+    }
+  }
+
+  &__menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    @include mobile {
+      justify-self: flex-end;
+    }
   }
 
   &__wrap {
@@ -40,16 +159,21 @@
   &__burger {
     cursor: pointer;
     padding: 8px;
+    display: none;
+
+    @include mobile {
+      display: block;
+    }
 
     &:hover,
     &:focus-visible {
-      .header-menu__line {
+      .frame-header__line {
         width: 100%;
       }
     }
 
     &--active {
-      .header-menu__line {
+      .frame-header__line {
         width: 100%;
 
         &:nth-child(2) {
@@ -66,121 +190,4 @@
       }
     }
   }
-
-
-  &__nav {
-    overflow: hidden;
-    right: 0;
-    top: 49px;
-    height: 0;
-    width: calc(100% - 18px);
-    position: fixed;
-    left: 9px;
-    background-color: var(--background);
-    transition: var(--transition);
-
-    &--open {
-      height: calc(100% - 98px);
-    }
-  }
-
-  &__list {
-    display: flex;
-    flex-direction: column;
-    padding: 32px 0;
-  }
-
-  &__item {
-    padding: 8px 0;
-    display: flex;
-    gap: 16px;
-    align-items: baseline;
-
-    span {
-      width: 40px;
-      text-align: right;
-      color: var(--text-80);
-    }
-
-    a {
-      font-size: var(--h3-size);
-      width: 100%;
-      height: 100%;
-      color: var(--text);
-      transition: var(--transition);
-
-      &:hover {
-        opacity: 1;
-
-        color: var(--text-contrast);
-      }
-    }
-  }
 }
-
-.frame-header__menu {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  @include mobile {
-    display: none;
-  }
-
-  &-list {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    list-style-type: none;
-  }
-
-  &-item {
-    width: 100%;
-    display: flex;
-  }
-
-  &-link {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 8px 0;
-    position: relative;
-    color: var(--gray);
-    transition: var(--transition);
-
-    &--active {
-      color: var(--text);
-    }
-
-    &:hover {
-      color: var(--accent);
-      scale: 1.2;
-
-      &:before {
-        opacity: 1;
-      }
-    }
-
-    &:before {
-      background: var(--text);
-      color: var(--text-contrast);
-      border-radius: 4px;
-      max-width: 20rem;
-      padding: 4px 8px;
-      opacity: 0;
-      transition: var(--transition);
-      width: max-content;
-      bottom: auto;
-      left: calc(100% + 10px);
-      right: auto;
-      top: 50%;
-      transform: translateY(-50%);
-      content: attr(data-tip);
-      pointer-events: none;
-      position: absolute;
-    }
-  }
-}
-
-
