--- a/src/components/v-theme-switch/v-theme-switch.scss
+++ b/src/components/v-theme-switch/v-theme-switch.scss
@@ -24,6 +24,11 @@
   grid-template-rows: repeat(10, 1fr);
   z-index: var(--z-index-modal);
 
+  @include mobile {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+  }
+
   &__element {
     width: 100%;
     height: 100%;
