--- a/src/components/ui/v-image/v-image.scss
+++ b/src/components/ui/v-image/v-image.scss
@@ -5,5 +5,10 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+
+    &--fullscreen {
+      object-fit: contain;
+      cursor: default;
+    }
   }
 }
