--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -32,6 +32,10 @@ html {
   font-size: 100%; // 16px
   height: 100%;
   overflow: hidden;
+
+  @include mobile {
+    font-size: 15px;
+  }
 }
 
 body {
