--- a/src/components/projects-block/projects-block.scss
+++ b/src/components/projects-block/projects-block.scss
@@ -1,13 +1,38 @@
-.project-broken {
+@use '@assets/style/mixins' as *;
+
+.projects-block {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
-  gap: 35px;
-  height: 100%;
+  gap: 100px;
+
+  @include mobile {
+    gap: 50px;
+  }
 }
 
-.container {
-  height: 100%;
-  overflow: hidden;
+.projects-list {
+  display: flex;
+  gap: 20px;
+
+  :deep(.card__content) {
+    aspect-ratio: 1 / 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  :deep(.v-image) {
+    height: 100%;
+    width: 100%;
+  }
+
+  &__item {
+    width: 100%;
+    height: 100%;
+    color: var(--text);
+  }
+
+  @include mobile {
+    flex-direction: column;
+  }
 }
